Issue #339 - Updating library search to improve module display using jumpmenu javascript.

--- a/components/library_search/library_search.scss
+++ b/components/library_search/library_search.scss
@@ -26,7 +26,7 @@
 .library-search__form {
   display: flex;
   flex-direction: column;
-  gap: $spacer * 1.5;
+  gap: $spacer * 1;
 
   .library-search__input-wrapper {
     flex-grow: 1;
@@ -34,6 +34,7 @@
 
   @include media-breakpoint-up(sm) {
     flex-direction: row;
+    gap: $spacer * 1.5;
   }
 
 }
@@ -48,11 +49,38 @@
 
 .library-search__link {
   @include make-link($link-color, none, $link-hover-color, underline);
+  &.list-inline-item {
+    display: list-item;
+
+    @include media-breakpoint-up(sm) {
+      display: inline-block;
+    }
+  }
   &:not(:last-child) {
-    margin-right: 0;
+    margin-right: $spacer;
   }
 
-  &:not(:first-child) {
-    margin-left: $spacer;
+  .psul-icon {
+
+    svg {
+      vertical-align: middle;
+      height: .875rem;
+      width: .875rem;
+    }
+  }
+}
+
+.library-search__jump-menu {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: $spacer * 1.5;
+  .btn-lg {
+    --bs-btn-font-size: #{$font-size-sm};
+    --bs-btn-padding-x: 1.5rem;
+    --bs-btn-padding-y: 0.375rem;
+    border-radius: var(--bs-border-radius);
+  }
+  .psul-icon {
+    display: none;
   }
 }
